<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_fi_home"
        android:title="@string/home" />
    <item
        android:id="@+id/bottom_nav_notif"
        android:icon="@drawable/ic_fi_notification"
        android:title="@string/notifikasi" />
    <item
        android:id="@+id/bottom_nav_sell"
        android:icon="@drawable/ic_fi_plus_circle"
        android:title="@string/jual" />
    <item
        android:id="@+id/bottom_nav_listsell"
        android:icon="@drawable/ic_fi_list"
        android:title="@string/daftar_jual" />
    <item
        android:id="@+id/bottom_nav_user"
        android:icon="@drawable/ic_fi_user"
        android:title="@string/user" />
</menu>